# algorithms-project-69

./: .gitignore  0  README.md  pyproject.toml
search_engine/: search_engine.py
tests/: test_search.py
